refactor: simplify execution scripts and documentation - Remove unused build.sh and run.sh scripts, update README.md and .gitignore